--- a/CocktailBar/Views/SearchViewCell.xib
+++ b/CocktailBar/Views/SearchViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="225" id="Tqv-6g-TdR" customClass="SearchViewCell" customModule="CocktailBar" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="200" id="Tqv-6g-TdR" customClass="SearchViewCell" customModule="CocktailBar" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="480" height="225"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tqv-6g-TdR" id="40y-Pg-Y7s">
@@ -29,23 +29,23 @@
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="zvV-bO-Mg0"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="category" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vaf-Xz-gmn">
-                                <rect key="frame" x="49" y="106" width="155" height="22"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vaf-Xz-gmn">
+                                <rect key="frame" x="49" y="104" width="213" height="21"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="drinkName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8F-Xd-I6X">
-                                <rect key="frame" x="28" y="46" width="207" height="32"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="27"/>
+                                <rect key="frame" x="28" y="20" width="114.5" height="30"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="25"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="yWV-o9-f40">
                                 <rect key="frame" x="345" y="96" width="20" height="20"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="alcohol" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HYO-D6-nfP">
-                                <rect key="frame" x="54" y="153.5" width="155" height="19.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="alcohol" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HYO-D6-nfP">
+                                <rect key="frame" x="54" y="153.5" width="48" height="19.5"/>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="16"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -54,22 +54,26 @@
                         <color key="backgroundColor" red="0.96440677835243949" green="0.91955329264445873" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="b8F-Xd-I6X" firstAttribute="leading" secondItem="spE-9R-Xcx" secondAttribute="leading" constant="28" id="4Id-z6-Fak"/>
-                            <constraint firstItem="vaf-Xz-gmn" firstAttribute="top" secondItem="b8F-Xd-I6X" secondAttribute="bottom" constant="28" id="BeL-9F-b7s"/>
+                            <constraint firstItem="b8F-Xd-I6X" firstAttribute="top" secondItem="spE-9R-Xcx" secondAttribute="top" constant="20" id="DnK-pc-00C"/>
+                            <constraint firstItem="vaf-Xz-gmn" firstAttribute="top" secondItem="b8F-Xd-I6X" secondAttribute="bottom" constant="54" id="NmZ-fm-17N"/>
                             <constraint firstItem="yWV-o9-f40" firstAttribute="centerY" secondItem="UxE-08-lPf" secondAttribute="centerY" id="Qn4-uf-ihX"/>
                             <constraint firstItem="HYO-D6-nfP" firstAttribute="leading" secondItem="spE-9R-Xcx" secondAttribute="leading" constant="54" id="XHV-3S-U4A"/>
                             <constraint firstItem="yWV-o9-f40" firstAttribute="centerX" secondItem="UxE-08-lPf" secondAttribute="centerX" constant="2" id="XMN-T5-dKo"/>
-                            <constraint firstItem="b8F-Xd-I6X" firstAttribute="top" secondItem="spE-9R-Xcx" secondAttribute="top" constant="46" id="fvc-nB-lo9"/>
-                            <constraint firstItem="UxE-08-lPf" firstAttribute="leading" secondItem="vaf-Xz-gmn" secondAttribute="trailing" constant="74" id="hKQ-8v-cSj"/>
                             <constraint firstItem="vaf-Xz-gmn" firstAttribute="leading" secondItem="spE-9R-Xcx" secondAttribute="leading" constant="49" id="i2I-ak-BJh"/>
-                            <constraint firstItem="UxE-08-lPf" firstAttribute="leading" secondItem="HYO-D6-nfP" secondAttribute="trailing" constant="69" id="jLb-wV-V7Q"/>
                             <constraint firstAttribute="bottom" secondItem="UxE-08-lPf" secondAttribute="bottom" constant="24" id="mwl-6l-arX"/>
                             <constraint firstAttribute="trailing" secondItem="UxE-08-lPf" secondAttribute="trailing" constant="22" id="oxH-cA-0ul"/>
                             <constraint firstAttribute="bottom" secondItem="HYO-D6-nfP" secondAttribute="bottom" constant="32" id="s9a-CG-paG"/>
-                            <constraint firstItem="UxE-08-lPf" firstAttribute="leading" secondItem="b8F-Xd-I6X" secondAttribute="trailing" constant="43" id="usm-LX-yN2"/>
+                            <constraint firstItem="UxE-08-lPf" firstAttribute="leading" secondItem="vaf-Xz-gmn" secondAttribute="trailing" constant="16" id="tLa-kw-G4T"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                                <color key="value" red="0.43707626579999997" green="0.69283635129999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="endColor">
+                                <color key="value" red="0.92366462949999995" green="0.86258852480000003" blue="0.57624393699999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
@@ -80,6 +84,14 @@
                     <constraint firstAttribute="bottom" secondItem="spE-9R-Xcx" secondAttribute="bottom" constant="10" id="Xzr-KJ-frq"/>
                     <constraint firstItem="spE-9R-Xcx" firstAttribute="top" secondItem="40y-Pg-Y7s" secondAttribute="top" constant="10" id="yZi-HK-MlM"/>
                 </constraints>
+                <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                        <color key="value" red="0.43707626579999997" green="0.69283635129999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </userDefinedRuntimeAttribute>
+                    <userDefinedRuntimeAttribute type="color" keyPath="endColor">
+                        <color key="value" red="0.92366462949999995" green="0.86258852480000003" blue="0.57624393699999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </userDefinedRuntimeAttribute>
+                </userDefinedRuntimeAttributes>
             </tableViewCellContentView>
             <connections>
                 <outlet property="activityIndicator" destination="yWV-o9-f40" id="ACf-1R-cJT"/>
