--- a/CocktailBar/Base.lproj/Main.storyboard
+++ b/CocktailBar/Base.lproj/Main.storyboard
@@ -59,11 +59,112 @@
                     <connections>
                         <outlet property="collectionView" destination="PVV-za-o1y" id="eSa-jg-K9K"/>
                         <outlet property="tableView" destination="W1A-cp-Ltj" id="vtk-4p-9GM"/>
+                        <segue destination="O4m-aO-IRY" kind="show" identifier="showDetails" id="QBv-42-hRX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yee-Ao-87A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-152.17391304347828" y="44.866071428571423"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="pM3-iZ-1gf">
+            <objects>
+                <viewController id="O4m-aO-IRY" customClass="DetailViewController" customModule="CocktailBar" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gJH-Pr-gyL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5sv-fX-IKw">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <subviews>
+                                    <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jGt-fp-n8Q">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cocktailName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7D9-bQ-moO">
+                                                <rect key="frame" x="40" y="20" width="334" height="62"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="334" id="Ll0-LF-ycb"/>
+                                                    <constraint firstAttribute="height" constant="62" id="VNp-sf-Ce3"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="76a-mG-98V">
+                                                <rect key="frame" x="40" y="114" width="334" height="286"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="286" id="2VC-B5-KTC"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Irf-F8-zc4">
+                                                <rect key="frame" x="40" y="426" width="334" height="20.5"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="instruction" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9R-xH-JNq">
+                                                <rect key="frame" x="40" y="454.5" width="334" height="20.5"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.73897832630000004" blue="0.96970564130000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="Irf-F8-zc4" firstAttribute="leading" secondItem="jGt-fp-n8Q" secondAttribute="leading" constant="40" id="3aj-vJ-EdR"/>
+                                            <constraint firstAttribute="trailing" secondItem="7D9-bQ-moO" secondAttribute="trailing" constant="40" id="4dx-ig-Nq2"/>
+                                            <constraint firstItem="Irf-F8-zc4" firstAttribute="top" secondItem="76a-mG-98V" secondAttribute="bottom" constant="26" id="BBG-lF-g4k"/>
+                                            <constraint firstAttribute="trailing" secondItem="76a-mG-98V" secondAttribute="trailing" constant="40" id="E9D-SH-9Gc"/>
+                                            <constraint firstItem="7D9-bQ-moO" firstAttribute="top" secondItem="jGt-fp-n8Q" secondAttribute="top" constant="20" id="Ftm-hG-fvc"/>
+                                            <constraint firstItem="76a-mG-98V" firstAttribute="top" secondItem="7D9-bQ-moO" secondAttribute="bottom" constant="32" id="Iyr-Sv-4vx"/>
+                                            <constraint firstItem="Irf-F8-zc4" firstAttribute="width" secondItem="76a-mG-98V" secondAttribute="width" id="OID-pv-BTz"/>
+                                            <constraint firstItem="7D9-bQ-moO" firstAttribute="leading" secondItem="jGt-fp-n8Q" secondAttribute="leading" constant="40" id="Qv1-A3-xP8"/>
+                                            <constraint firstItem="a9R-xH-JNq" firstAttribute="width" secondItem="Irf-F8-zc4" secondAttribute="width" id="R6R-f4-XDc"/>
+                                            <constraint firstAttribute="trailing" secondItem="Irf-F8-zc4" secondAttribute="trailing" constant="40" id="dbC-Ti-afv"/>
+                                            <constraint firstItem="a9R-xH-JNq" firstAttribute="centerX" secondItem="jGt-fp-n8Q" secondAttribute="centerX" id="pMF-Gb-ldQ"/>
+                                            <constraint firstItem="76a-mG-98V" firstAttribute="leading" secondItem="jGt-fp-n8Q" secondAttribute="leading" constant="40" id="q8E-PO-Ptg"/>
+                                            <constraint firstItem="a9R-xH-JNq" firstAttribute="top" secondItem="Irf-F8-zc4" secondAttribute="bottom" constant="8" id="wps-DM-gCl"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="jGt-fp-n8Q" firstAttribute="height" secondItem="5sv-fX-IKw" secondAttribute="height" id="MOZ-hl-CrC"/>
+                                    <constraint firstItem="jGt-fp-n8Q" firstAttribute="width" secondItem="5sv-fX-IKw" secondAttribute="width" id="Opz-u6-JpZ"/>
+                                    <constraint firstItem="jGt-fp-n8Q" firstAttribute="leading" secondItem="5sv-fX-IKw" secondAttribute="leading" id="PT8-A1-LjB"/>
+                                    <constraint firstAttribute="trailing" secondItem="jGt-fp-n8Q" secondAttribute="trailing" id="kj7-YL-KVT"/>
+                                    <constraint firstAttribute="bottom" secondItem="jGt-fp-n8Q" secondAttribute="bottom" id="nmK-An-wYz"/>
+                                    <constraint firstItem="jGt-fp-n8Q" firstAttribute="top" secondItem="5sv-fX-IKw" secondAttribute="top" id="rwe-6r-VRc"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Gvc-z6-CiV"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="BKN-7v-VzI"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="5sv-fX-IKw" firstAttribute="trailing" secondItem="5sy-kw-gXe" secondAttribute="trailing" id="3Kl-XG-Ux4"/>
+                            <constraint firstItem="5sv-fX-IKw" firstAttribute="leading" secondItem="5sy-kw-gXe" secondAttribute="leading" id="3PH-p2-Bb7"/>
+                            <constraint firstItem="5sv-fX-IKw" firstAttribute="width" secondItem="gJH-Pr-gyL" secondAttribute="width" id="Fbb-ct-Ob1"/>
+                            <constraint firstItem="5sv-fX-IKw" firstAttribute="top" secondItem="5sy-kw-gXe" secondAttribute="top" id="Wgw-Sf-z1G"/>
+                            <constraint firstAttribute="bottom" secondItem="5sv-fX-IKw" secondAttribute="bottom" id="X5B-OE-ReZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5sy-kw-gXe"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="z6m-OR-gzs"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="categoryLabel" destination="Irf-F8-zc4" id="hW6-Ia-u7c"/>
+                        <outlet property="cocktailImage" destination="76a-mG-98V" id="XEA-KP-kTv"/>
+                        <outlet property="instructionLabel" destination="a9R-xH-JNq" id="fY7-dU-xOL"/>
+                        <outlet property="mainViewOutlet" destination="jGt-fp-n8Q" id="BLw-WH-RUd"/>
+                        <outlet property="nameLabel" destination="7D9-bQ-moO" id="NwD-fw-Ssu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FdN-T9-vAM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="549.27536231884062" y="46.875"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gr3-8R-5nn">
